--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Tohle je moje stránka</h1>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid fuga iure, illum velit aspernatur soluta ullam ducimus quod, quidem laudantium rem blanditiis eligendi odio veritatis debitis neque quibusdam vero accusamus.</p>
 </body>
 </html>
